logs/lark.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Flask-0.10.1.egg-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/colander'...
Listing './lib/python3.5/site-packages/colander/locale'...
Listing './lib/python3.5/site-packages/colander/locale/cs'...
Listing './lib/python3.5/site-packages/colander/locale/cs/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/colander/locale/de_DE'...
Listing './lib/python3.5/site-packages/colander/locale/de_DE/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/colander/locale/es'...
Listing './lib/python3.5/site-packages/colander/locale/es/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/colander/locale/fr'...
Listing './lib/python3.5/site-packages/colander/locale/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/colander/locale/ja'...
Listing './lib/python3.5/site-packages/colander/locale/ja/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/colander/locale/nl'...
Listing './lib/python3.5/site-packages/colander/locale/nl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/colander/locale/pl'...
Listing './lib/python3.5/site-packages/colander/locale/pl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/colander/locale/pt'...
Listing './lib/python3.5/site-packages/colander/locale/pt/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/colander/locale/pt_BR'...
Listing './lib/python3.5/site-packages/colander/locale/pt_BR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/colander/locale/ru'...
Listing './lib/python3.5/site-packages/colander/locale/ru/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/colander/locale/sv'...
Listing './lib/python3.5/site-packages/colander/locale/sv/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/colander/locale/zh'...
Listing './lib/python3.5/site-packages/colander/locale/zh/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/colander/tests'...
Listing './lib/python3.5/site-packages/colander-0.9.9.egg-info'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/flask/testsuite'...
Listing './lib/python3.5/site-packages/flask/testsuite/static'...
Listing './lib/python3.5/site-packages/flask/testsuite/templates'...
Listing './lib/python3.5/site-packages/flask/testsuite/templates/nested'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/blueprintapp'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/blueprintapp/apps'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/blueprintapp/apps/admin'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/blueprintapp/apps/admin/static'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/blueprintapp/apps/admin/templates'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/blueprintapp/apps/frontend'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/blueprintapp/apps/frontend/templates'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/config_package_app'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/flask_broken'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/flask_newext_package'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/flaskext'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/flaskext/oldext_package'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/lib'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/lib/python2.5'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/lib/python2.5/site-packages'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/lib/python2.5/site-packages/site_package'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/moduleapp'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/moduleapp/apps'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/moduleapp/apps/admin'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/moduleapp/apps/admin/static'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/moduleapp/apps/admin/templates'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/moduleapp/apps/frontend'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/moduleapp/apps/frontend/templates'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/path'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/path/installed_package'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/subdomaintestmodule'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/subdomaintestmodule/static'...
Listing './lib/python3.5/site-packages/iso8601'...
Listing './lib/python3.5/site-packages/iso8601-0.1.8.egg-info'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/lark'...
Listing './lib/python3.5/site-packages/lark/ext'...
Listing './lib/python3.5/site-packages/lark/ext/django'...
Compiling './lib/python3.5/site-packages/lark/ext/django/views.py'...
***   File "./lib/python3.5/site-packages/lark/ext/django/views.py", line 55
    except DataError, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/lark/ext/flask'...
Compiling './lib/python3.5/site-packages/lark/ext/flask/redis_api.py'...
***   File "./lib/python3.5/site-packages/lark/ext/flask/redis_api.py", line 36
    except DataError, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/lark/redis'...
Listing './lib/python3.5/site-packages/lark-0.0.4.egg-info'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/redis'...
Listing './lib/python3.5/site-packages/redis-2.8.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/translationstring'...
Listing './lib/python3.5/site-packages/translationstring/tests'...
Listing './lib/python3.5/site-packages/translationstring/tests/fixtures'...
Listing './lib/python3.5/site-packages/translationstring/tests/fixtures/locales'...
Listing './lib/python3.5/site-packages/translationstring/tests/fixtures/locales/de'...
Listing './lib/python3.5/site-packages/translationstring/tests/fixtures/locales/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/translationstring-1.3.dist-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './share'...
Listing './share/python-wheels'...
